(vendored_dirs merlin-js js_top_worker js_of_ocaml brr)

(subdir
 docs/
 (rule
  (mode (promote (until-clean)))
  (targets playground.js)
  (deps
   (:js %{workspace_root}/src/main.bc.js))
  (action
   (run
    esbuild
    --platform=browser
    ; --external:fs
    ; --external:tty
    ; --external:child_process
    ; --external:constants
    ; --minify
    ; --bundle
    --outfile=playground.js
    %{js})))
 (rule
  (targets worker.js)
  (mode (promote (until-clean)))
  (deps
   (:js %{workspace_root}/src/worker.js))
  (action
   (run jsoo_minify %{js} -o %{targets})))
 (rule
  (targets merlin.js)
  (mode (promote (until-clean)))
  (deps
   (:js %{workspace_root}/src/merlin_worker.bc.js))
  (action
   (run jsoo_minify %{js} -o %{targets}))))