; Stdlib worker

(executable
 (name worker)
 (modes byte)
 (flags
   (:standard -linkall))
 (modules worker)
 (libraries eio eio.core eio.mock js_top_worker))

(executable
 (name merlin_worker)
 (modes js)
 ; (flags -g)
 ; (js_of_ocaml (flags --debug-info --pretty --source-map))
 (modules merlin_worker)
 (libraries eio eio.core eio.mock merlin-js.worker))

(rule
 (targets export.txt)
 (deps worker.bc)
 (action
  (run jsoo_listunits -o %{targets} stdlib eio eio.core eio.mock)))

(rule
 (targets worker.js)
 (action
  (run
   %{bin:js_of_ocaml}
   --export
   %{dep:export.txt}
   --toplevel
   --pretty
   +toplevel.js
   +dynlink.js
   %{dep:worker.bc}
   -o
   %{targets})))

; Playground

(executable
 (name main)
 (modes js)
 (modules
  (:standard \ worker merlin_worker))
 (libraries
  brr
  code-mirror
  merlin-js.code-mirror
  js_top_worker-client
  rpclib-lwt))
